# Ikkyu_terminal

./: Cargo.toml  README.md  package-lock.json  package.json  todo  tsconfig.json  vite.config.ts
src/: App.vue  main.rs  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai.rs  cmd.rs  config.rs  invoke_handler.rs  lib.rs  main.rs  tray.rs
src-tauri/src/cmd/: command.rs  system_info.rs
src/ai_ask/: ai.rs  config.rs  mod.rs
src/class/: baseShell.ts  terminalObj.ts
src/components/: Container.vue
src/store/: terminalStore.ts
src/terminal/: Terminal.vue
src/terminal/components/: THelpBox.vue
src/terminal/css/: style.css
src/utils/: index.ts  tauri_event.ts
